syntax = "proto3";

package example.grpc.api.v1;

option go_package = "github.com/dimoktorr/monitoring/pkg/api/v1";

service ExampleService {
  rpc GetProduct(GetRequest) returns (GetResponse) {};
  rpc Pay(PayRequest) returns (PayResponse) {};
}

message GetRequest {
  int32 id = 1;
}

message PayRequest {
  int32 product_id = 1;
}

message PayResponse {
  string status = 1;
}

message GetResponse{
  repeated Product products = 1;
}

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
}